--- a/Magda/appsettings.json
+++ b/Magda/appsettings.json
@@ -3,7 +3,7 @@
     ///"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Magda-C0B5DFF4-2EEC-46EA-82F6-292598FF49E5;Trusted_Connection=True;MultipleActiveResultSets=true"
     ///"DefaultConnection": "Server=localhost\\DESKTOP-SHMOVFO;Database=test;User ID=wrona;Password=admin;Trusted_Connection=True;"
     //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=test;User ID=wrona;Password=admin;"
-    "DefaultConnection": "Server=localhost;Database=Elo;User=sa;Password=Password1;"
+    "DefaultConnection": "Server=localhost;Database=ELOO;User=sa;Password=Password1;"
   },
     "Logging": {
       "LogLevel": {
